# sortinator

./: .gitignore  README.md  README_RU.md  pyproject.toml
src/: gui.py  sorting.py  utils.py
tests/: test_parse.py  test_sorting.py
